filtro y reportes para vet